--- a/packages/manager/modules/nutanix/src/dashboard/component/datacenter-name/translations/Messages_es_ES.json
+++ b/packages/manager/modules/nutanix/src/dashboard/component/datacenter-name/translations/Messages_es_ES.json
@@ -14,5 +14,5 @@
   "server_datacenter_WAW": "Varsovia (WAW{{number}}) - Polonia",
   "server_datacenter_RBX_HZ": "Roubaix (RBXHZ) - Francia",
   "server_datacenter_GSW": "(GSW) - Francia",
-  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - India"
+  "server_datacenter_YNM": "Bombay (YNM {{number}}) - India"
 }
