--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_fr_FR.json
@@ -8,6 +8,7 @@
   "pci_databases_users_add_create": "Créer un utilisateur",
   "pci_databases_users_add_success_message": "L'utilisateur {{ username }} a été ajouté avec le mot de passe <code>{{password}}</code>",
   "pci_databases_users_add_error_save": "Une erreur est survenue lors de la création de l'utilisateur {{ user }} : {{ message }}.",
+  "pci_databases_users_add_error_username_exist": "L'utilisateur {{ user }} existe déjà.",
   "pci_databases_users_add_cancel": "Annuler",
   "pci_databases_users_add_categories_label": "Catégories",
   "pci_databases_users_add_commands_label": "Commandes",
