--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_it_IT.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_it_IT.json
@@ -119,13 +119,5 @@
   "pack_move_resume_comfort_activation": "Le spese di attivazione dell'opzione Confort sono di {{ price }} +IVA.",
   "pack_move_resume_install_fees": "Le spese di installazione sono di {{ price }} +IVA.",
   "pack_move_resume_creation_line_fees": "Le spese di creazione della linea sono di {{ price }} +IVA.",
-  "pack_move_resume_promotion": "Le spese di installazione e i primi {{ duration }} mesi del nuovo abbonamento sono incluse (locazione del modem, opzioni aggiuntive o spese di trasporto escluse).",
-  "pack_move_modem_yes": "Modem nove ({{ price }} +IVA/mese)",
-  "pack_move_modem_recycled": "Modem riciclato ({{ price }} +IVA/mese)",
-  "pack_move_modem_no": "Nessun modem",
-  "pack_move_modem_required": "La selezione di un tipo di modem è obbligatoria",
-  "pack_move_confirm_modem_rental_yes": "Location modem nove",
-  "pack_move_confirm_modem_rental_recycled": "Location modem riciclato",
-  "pack_move_offers_debit_mention_1": "(1) Fino a 92 Mb/s discendenti in VDSL e 22 Mb/s in ADSL, secondo l'ammissibilità.",
-  "pack_move_offers_debit_mention_2": "(2) Fino a 36 Mb/s importo in VDSL e 1 Mb/s in ADSL, secondo l'ammissibilità."
+  "pack_move_resume_promotion": "Le spese di installazione e i primi {{ duration }} mesi del nuovo abbonamento sono incluse (locazione del modem, opzioni aggiuntive o spese di trasporto escluse)."
 }
