--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_pt_PT.json
@@ -117,13 +117,5 @@
   "pack_move_resume_comfort_activation": "As taxas de ativação da opção Confort são de {{ price }} + IVA.",
   "pack_move_resume_install_fees": "As taxas de instalação são de {{ price }} + IVA.",
   "pack_move_resume_creation_line_fees": "Os custos de criação da linha são de {{ price }} + IVA.",
-  "pack_move_resume_promotion": "As taxas de instalação e os {{ duration }} primeiros meses da sua nova subscrição são oferecidos (sem locação do modem, opções suplementares ou custos de transporte).",
-  "pack_move_modem_yes": "Modem nove ({{ price }} s/IVA/mês)",
-  "pack_move_modem_recycled": "Modem reciclado ({{ price }} s/IVA/mês)",
-  "pack_move_modem_no": "Sem modem",
-  "pack_move_modem_required": "A seleção de um tipo de modem é obrigatória",
-  "pack_move_confirm_modem_rental_yes": "Locação modem nove",
-  "pack_move_confirm_modem_rental_recycled": "Locação modem reciclada",
-  "pack_move_offers_debit_mention_1": "(1) Até 92 Mb/s desceram em VDSL e 22 Mb/s em ADSL, consoante a elegibilidade.",
-  "pack_move_offers_debit_mention_2": "(2) Até 36 Mb/s montante em VDSL e 1 Mb/s em ADSL, consoante a elegibilidade."
+  "pack_move_resume_promotion": "As taxas de instalação e os {{ duration }} primeiros meses da sua nova subscrição são oferecidos (sem locação do modem, opções suplementares ou custos de transporte)."
 }
