--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_en_GB.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_en_GB.json
@@ -274,13 +274,5 @@
   "pack_move_resume_promotion": "The setup fees and the first {{ duration }} months of your new subscription are included (excluding modem rental, additional options and transportation).",
   "pack_move_resume_comfort_activation": "The Comfort option activation fee is {{ price }} ex. VAT.",
   "pack_move_resume_install_fees": "Setup fees are {{ price }} ex. VAT.",
-  "pack_move_resume_creation_line_fees": "Line creation costs are {{ price }} ex. VAT.",
-  "pack_move_modem_yes": "New modem ({{ price }} ex. VAT/month)",
-  "pack_move_modem_recycled": "Recycled modem ({{ price }} ex. VAT/month)",
-  "pack_move_modem_no": "No modem",
-  "pack_move_modem_required": "You must select a modem type",
-  "pack_move_confirm_modem_rental_yes": "New modem rental",
-  "pack_move_confirm_modem_rental_recycled": "Location modem recycled",
-  "pack_move_offers_debit_mention_1": "(1) Up to 92 Mb/s descending in VDSL and 22 Mb/s in ADSL, depending on eligibility.",
-  "pack_move_offers_debit_mention_2": "(2) Up to 36 Mb/s VDSL and 1 Mb/s ADSL, depending on eligibility."
+  "pack_move_resume_creation_line_fees": "Line creation costs are {{ price }} ex. VAT."
 }
