feat: use a select box on gtr options for migration and move offers
Signed-off-by: Stephanie Moallic <stephanie.moallic@corp.ovh.com>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_fr_FR.json
@@ -144,12 +144,13 @@
   "pack_move_domain_additional_text": "/ domaine",
   "pack_move_gtr_title": "GTR (si éligible)",
   "pack_move_gtr_available": "GTR OVHcloud disponible",
-  "pack_move_gtr_4ho_available": "GTR 4HO disponible",
-  "pack_move_gtr_10ho_available": "GTR 10HO disponible",
-  "pack_move_gtr_5m_4ho_available": "GTR 4HO & OPTION CONFORT 5M disponible",
-  "pack_move_gtr_5m_10ho_available": "GTR 10HO & OPTION CONFORT 5M disponible",
-  "pack_move_gtr_20m_4ho_available": "GTR 4HO & OPTION CONFORT 20M disponible",
-  "pack_move_gtr_20m_10ho_available": "GTR 10HO & OPTION CONFORT 20M disponible",
+  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} HT/mois)",
+  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} HT/mois)",
+  "pack_move_gtr_5m_4ho": "GTR 4HO & OPTION CONFORT 5M ({{ price }} HT/mois)",
+  "pack_move_gtr_5m_10ho": "GTR 10HO & OPTION CONFORT 5M ({{ price }} HT/mois)",
+  "pack_move_gtr_20m_4ho": "GTR 4HO & OPTION CONFORT 20M ({{ price }} HT/mois)",
+  "pack_move_gtr_20m_10ho": "GTR 10HO & OPTION CONFORT 20M ({{ price }} HT/mois)",
+  "pack_move_no_gtr": "Aucune GTR",
   "pack_move_gtr_add": "Ajouter cette GTR",
   "pack_move_offer_choice": "Choix de l'offre",
   "pack_move_offer_choice_error_loading": "Oups ! Nous ne parvenons pas à charger les offres disponibles pour votre pack.",
