--- a/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_fr_FR.json
@@ -1,6 +1,6 @@
 {
   "pci_apps_general_information_info_title": "Informations générales",
-  "pci_apps_general_information_info_app_url": "URL d'accès",
+  "pci_apps_general_information_info_app_url": "URL d'accès (HTTP endpoint)",
   "pci_apps_general_information_info_app_name": "Nom de l'app",
   "pci_apps_general_information_info_app_image": "Image Docker",
   "pci_apps_general_information_info_app_image_action_update": "Mettre à jour l'image",
