build(iam): make routes a module
ref: MANAGER-10394
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/resolves/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/resolves/translations/Messages_fr_FR.json
@@ -1,3 +1,4 @@
 {
+  "iam_resolves_breadcrumbs_create_policy": "Créer une politique",
   "iam_resolves_breadcrumbs_default": "Gestion des identités et des accès (IAM)"
 }
