--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_fr_FR.json
@@ -12,7 +12,7 @@
   "pci_app_add_privacy_settings_item_restricted_description": "L’accès à votre app est restreint par une authentification.",
   "pci_app_add_privacy_settings_item_public": "Accès public",
   "pci_app_add_privacy_settings_item_public_description": "Votre app est accessible à tout le monde grâce à votre URL ou API. N’importe qui peut accéder à votre application et aux données qui y sont attachées.",
-  "pci_app_add_privacy_settings_item_public_warning": "Soyez prudent·e avec les données sensibles.",
+  "pci_app_add_privacy_settings_item_public_warning": "Soyez prudent avec les données sensibles.",
   "pci_app_add_privacy_title": "Règle d'accès à votre app",
   "pci_app_add_settings_port": "Port HTTP",
   "pci_app_add_settings_port_help": "Port HTTP sur lequel votre app est liée.",
