--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/translations/Messages_fr_FR.json
@@ -8,7 +8,7 @@
   "pci_projects_project_storages_volume_backup_list_status_restoring": "En cours de restauration",
   "pci_projects_project_storages_volume_backup_list_datagrid_menu_topbar_action_create": "Créer une sauvegarde de volume",
   "pci_projects_project_storages_volume_backup_list_datagrid_menu_action_restore": "Restaurer un volume",
-  "pci_projects_project_storages_volume_backup_list_datagrid_menu_action_create_volume": "Créer un nouveau volume",
+  "pci_projects_project_storages_volume_backup_list_datagrid_menu_action_create_volume": "Créer un volume",
   "pci_projects_project_storages_volume_backup_list_datagrid_menu_action_delete": "Supprimer",
   "pci_projects_project_storages_volume_backup_list_datagrid_column_name": "Nom",
   "pci_projects_project_storages_volume_backup_list_datagrid_column_id": "ID",
