--- a/packages/manager/modules/vps/src/vps/translations/Messages_de_DE.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_de_DE.json
@@ -529,5 +529,16 @@
   "vps_configuration_additional_disk_upgrade_option": "Festplattengröße erhöhen",
   "vps_additional_disk_current_capacity": "Festplattenkapazität: {{vpsDiskCapacity}}",
   "vps_additional_disk_cant_upgrade": "Möchten Ihre zusätzliche Festplatte erweitern? Migrieren Sie dafür auf einen Server der neuen VPS-Reihe, indem Sie oben auf „VPS migrieren“ klicken.",
-  "vps_configuration_desactivate_option_disabled_info": "Die zusätzliche Festplatte ist kündbar, sobald die Vertragslaufzeit Ihres VPS abgelaufen ist."
+  "vps_configuration_desactivate_option_disabled_info": "Die zusätzliche Festplatte ist kündbar, sobald die Vertragslaufzeit Ihres VPS abgelaufen ist.",
+  "vps_dashboard_snapshot_download_modal_title": "Snapshot herunterladen",
+  "vps_dashboard_snapshot_download_modal_summary": "Informationen",
+  "vps_dashboard_snapshot_download_modal_service_name": "Name des Dienstes",
+  "vps_dashboard_snapshot_download_modal_snapshot_size": "Größe",
+  "vps_dashboard_snapshot_download_modal_snapshot_creation_date": "Erstellungsdatum des Snapshots",
+  "vps_dashboard_snapshot_download_modal_snapshot_link_expiration_date": "Ablaufdatum des Download-Links",
+  "vps_dashboard_snapshot_download_modal_snapshot_loading_message": "Erstellen des Download-Befehls für den Snapshot ...",
+  "vps_dashboard_snapshot_download_modal_snapshot_curl_success": "Download-Befehl erstellt.",
+  "vps_dashboard_snapshot_download_modal_snapshot_curl_info": "Bitte kopieren Sie den CURL-Befehl und führen Sie ihn auf Ihrer Maschine aus. Mehr Informationen zu CURL finden <a href=\"{{curlDocumentationLink}}\" target=\"_blank\">Sie hier</a>.",
+  "vps_dashboard_snapshot_download_modal_snapshot_button_label": "Download-Link erstellen",
+  "vps_configuration_download_snapshot_title_button": "Snapshot herunterladen"
 }
