--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_de_DE.json
@@ -1110,7 +1110,6 @@
   "server_nutanix_cluster_node_warning_2": "Wir empfehlen Ihnen, Ihre Konfiguration direkt im Dashboard des Servers zu bearbeiten, der mit Ihrem Nutanix-Cluster verbunden ist. Zum Dashboard: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Alle mit diesem Server verbundenen Abrechnungen sehen Sie in Ihrem Nutanix-Cluster: {{clusterDashboardLink}}",
   "server_rtm_eol_info": "Wichtige Informationen zur Einstellung des veralterten Dienstes Real Time Monitoring. Dieser Dienst wird nur noch bis zum 30. Juni 2022 betrieben. Nach diesem Datum wird die Anzeige der Daten Ihrer Nutzung eingestellt. Dies hat keine Auswirkungen auf den Betrieb Ihres Servers.",
-  "server_configuration_monitoring_cta_setting": "Konfigurieren",
   "server_configuration_monitoring_status_disabled": "Deaktiviert",
   "server_configuration_monitoring_status_proactive": "Aktiviert mit proaktivem Eingriff",
   "server_configuration_monitoring_status_no-proactive": "Aktiviert ohne proaktiven Eingriff",
@@ -1127,7 +1126,5 @@
   "server_configuration_monitoring_update_modal_description_status_no-proactive": "Ihr Server wird überwacht. Sie erhalten per E-Mail Benachrichtigungen an die Adresse, die der Kennung Ihres technischen Ansprechpartners zugeordnet ist. OVHcloud greift nur auf Ihrer Maschine ein, wenn Sie dies veranlassen.",
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Die Eingriffe auf dem Server {{serverName}} sind aktiviert.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Die Eingriffe auf dem Server {{serverName}} sind deaktiviert.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Beim Wechsel der Monitoring-Option ist ein Fehler aufgetreten.",
-  "server_configuration_installation_ovh_desktop_ERP": "ERP",
-  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - Indien"
+  "server_configuration_monitoring_update_modal_update_request_failed": "Beim Wechsel der Monitoring-Option ist ein Fehler aufgetreten."
 }
