--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_en_GB.json
@@ -1110,7 +1110,6 @@
   "server_nutanix_cluster_node_warning_2": "We recommend making all of the configuration changes directly in the dashboard of the server linked to your Nutanix cluster: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "All billing actions linked to this server are visible on your Nutanix cluster: {{clusterDashboardLink}}",
   "server_rtm_eol_info": "Important information - the Real Time Monitoring Service will soon be obsolete. It will continue running until 30 June 2022. After this date, we will stop displaying your consumption data. This will not affect your server’s operation.",
-  "server_configuration_monitoring_cta_setting": "Configure",
   "server_configuration_monitoring_status_disabled": "Disabled",
   "server_configuration_monitoring_status_proactive": "Enabled with proactive intervention",
   "server_configuration_monitoring_status_no-proactive": "Enabled without proactive intervention",
@@ -1127,7 +1126,5 @@
   "server_configuration_monitoring_update_modal_description_status_no-proactive": "Your server is monitored, and you will receive email alerts to the address linked to your technical contact’s ID. OVHcloud will not intervene on your machine without a direct request from you.",
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Interventions are enabled on the {{serverName}} server.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Interventions are disabled on the {{serverName}} server.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "An error has occurred changing the monitoring option.",
-  "server_configuration_installation_ovh_desktop_ERP": "ERP",
-  "server_datacenter_YNM": "Mumbai (YNM{{number}}) - India"
+  "server_configuration_monitoring_update_modal_update_request_failed": "An error has occurred changing the monitoring option."
 }
