--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_es_ES.json
@@ -1088,7 +1088,7 @@
   "server_datacenter_WAW": "Varsovia (WAW{{number}}) - Polonia",
   "server_datacenter_RBX_HZ": "Roubaix (RBXHZ) - Francia",
   "server_datacenter_GSW": "(GSW) - Francia",
-  "server_datacenter_YNM": "Bombay (YNM {{number}}) - India",
+  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - India",
   "server_usage_chart_yaxis_label": "Uso (en %)",
   "server_usage_chart_xaxis_label": "Tiempo",
   "server_duration_upto": "Hasta el {{t0}}",
@@ -1110,7 +1110,6 @@
   "server_nutanix_cluster_node_warning_2": "Le recomendamos que realice las modificaciones de configuración directamente desde el panel de control del servidor asociado a su cluster Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Puede consultar todas las acciones de facturación asociadas a este servidor en su cluster Nutanix: {{clusterDashboardLink}}",
   "server_rtm_eol_info": "Información importante sobre la obsolescencia de Real Time Monitoring: el servicio seguirá funcionando hasta el 30 de junio de 2022. A partir de esa fecha, sus datos de consumo dejarán de mostrarse, sin que ello afecte al funcionamiento de su servidor.",
-  "server_configuration_monitoring_cta_setting": "Configurar",
   "server_configuration_monitoring_status_disabled": "Desactivado",
   "server_configuration_monitoring_status_proactive": "Activado con intervención proactiva",
   "server_configuration_monitoring_status_no-proactive": "Activado sin intervención proactiva",
@@ -1127,7 +1126,5 @@
   "server_configuration_monitoring_update_modal_description_status_no-proactive": "Su servidor está monitorizado y recibirá las alertas correspondientes por correo electrónico en la dirección asociada a su contacto técnico. OVHcloud no intervendrá en su máquina sin una solicitud directa por su parte.",
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Las intervenciones en el servidor {{serverName}} están activadas.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Las intervenciones en el servidor {{serverName}} están desactivadas.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Se ha producido un error al modificar la opción de monitoring.",
-  "server_configuration_installation_ovh_desktop_ERP": "ERP",
-  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - India"
+  "server_configuration_monitoring_update_modal_update_request_failed": "Se ha producido un error al modificar la opción de monitoring."
 }
