--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
@@ -1110,7 +1110,6 @@
   "server_nutanix_cluster_node_warning_2": "Consigliamo di apportare tutte le modifiche di configurazione direttamente nella dashboard del server associato al cluster Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Tutte le azioni di fatturazione associate a questo server sono visibili sul cluster Nutanix: {{clusterDashboardLink}}",
   "server_rtm_eol_info": "Informazione importante sull'obsolescenza di Real Time Monitoring: il servizio continuerà a funzionare fino al 30 giugno 2022. A partire da questa data la visualizzazione dei dati di consumo verrà interrotta, senza impatto sul funzionamento del tuo server.",
-  "server_configuration_monitoring_cta_setting": "Configura",
   "server_configuration_monitoring_status_disabled": "Disattivato",
   "server_configuration_monitoring_status_proactive": "Attivato con intervento proattivo",
   "server_configuration_monitoring_status_no-proactive": "Attivato senza intervento proattivo",
@@ -1127,7 +1126,5 @@
   "server_configuration_monitoring_update_modal_description_status_no-proactive": "Il tuo server è monitorato e riceverai eventuali notifiche via email all'indirizzo associato all'identificativo del contatto tecnico. OVHcloud non interverrà sulla macchina senza una richiesta diretta da parte tua.",
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Gli interventi sul server {{serverName}} sono attivi.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Gli interventi sono disattivati sul server {{serverName}}.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Si è verificato un errore durante la modifica dell'opzione di monitoring.",
-  "server_configuration_installation_ovh_desktop_ERP": "Pianificazione delle risorse d'impresa (ERP)",
-  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - India"
+  "server_configuration_monitoring_update_modal_update_request_failed": "Si è verificato un errore durante la modifica dell'opzione di monitoring."
 }
