--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pt_PT.json
@@ -1110,7 +1110,6 @@
   "server_nutanix_cluster_node_warning_2": "Recomendamos que efetue todas as alterações de configuração diretamente no painel de controlo do servidor associado ao seu cluster Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Todas as ações de faturação relacionadas com este servidor são visíveis no seu cluster Nutanix: {{clusterDashboardLink}}",
   "server_rtm_eol_info": "Informação importante relativa à obsolescência do serviço Real Time Monitoring - o serviço continuará a funcionar até 30 de junho de 2022. Após essa data, iremos parar a apresentação dos seus dados de consumo, sem que isso afete o funcionamento do seu servidor.",
-  "server_configuration_monitoring_cta_setting": "Configurar",
   "server_configuration_monitoring_status_disabled": "Desativado",
   "server_configuration_monitoring_status_proactive": "Ativado com intervenção proativa",
   "server_configuration_monitoring_status_no-proactive": "Ativado sem intervenção proativa",
@@ -1127,7 +1126,5 @@
   "server_configuration_monitoring_update_modal_description_status_no-proactive": "Com a monitorização do seu servidor, receberá os alertas por e-mail, no endereço associado ao identificador do seu contacto técnico. A OVHcloud não intervirá na sua máquina sem um pedido direto da sua parte.",
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "As intervenções no servidor {{serverName}} estão ativas.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "As intervenções estão desativadas no servidor {{serverName}}.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Ocorreu um erro aquando da alteração da opção de monitorização.",
-  "server_configuration_installation_ovh_desktop_ERP": "ERP",
-  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - Índia"
+  "server_configuration_monitoring_update_modal_update_request_failed": "Ocorreu um erro aquando da alteração da opção de monitorização."
 }
