--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/translations/Messages_de_DE.json
@@ -13,5 +13,8 @@
   "pci_databases_current_queries_datagrid_column_database": "Datenbank",
   "pci_databases_current_queries_datagrid_column_client_address": "Client-Adresse",
   "pci_databases_current_queries_datagrid_column_application_name": "Name der Anwendung",
-  "pci_databases_current_queries_fetch_error": "Beim Laden der aktuellen Anfragen ist ein Fehler aufgetreten. Bitte versuchen Sie es später erneut."
+  "pci_databases_current_queries_fetch_error": "Beim Laden der aktuellen Anfragen ist ein Fehler aufgetreten. Bitte versuchen Sie es später erneut.",
+  "pci_databases_current_queries_datagrid_terminate_action_label": "Beenden",
+  "pci_databases_current_queries_datagrid_terminate_action_success": "Die identifizierte Anfrage {{pid}} wird gerade abgeschlossen und ist beim nächsten Laden nicht mehr auf der Liste.",
+  "pci_databases_current_queries_datagrid_terminate_action_error": "Die identifizierte Anfrage {{pid}} kann nicht abgeschlossen werden."
 }
