--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
@@ -155,8 +155,8 @@
   "hosting_dashboard_service_privatesql_order": "Order",
   "hosting_dashboard_service_privatesql_order_title": "Order a Web Cloud Database",
   "hosting_dashboard_service_privatesql_active": "Enable",
-  "hosting_dashboard_service_privatesql_active_long": "Enable a Web Cloud Database",
-  "hosting_dashboard_service_privatesql_active_remaining": "{{ count }} Web Cloud Database not activated",
+  "hosting_dashboard_service_privatesql_active_long": "Activate a Web Cloud Database",
+  "hosting_dashboard_service_privatesql_active_remaining": "{{count}} Web Cloud Databases not activated",
   "hosting_dashboard_service_privatesql_active_doing": "Enabling...",
   "hosting_dashbaord_service_privatesql_detach": "Detach",
   "hosting_dashboard_service_web_info_1": "on 1 recommended",
