--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/translations/Messages_fr_FR.json
@@ -1,5 +1,5 @@
 {
-  "pci_projects_project_storages_volume_backup_breadcrumb": "volume backup",
+  "pci_projects_project_storages_volume_backup_breadcrumb": "Volume Backup",
   "pci_projects_project_storages_volume_backup_guides_storages_overview_title": "Tous les guides stockage et sauvegarde",
   "pci_projects_project_storages_volume_backup_guides_storages_overview_description": "Débuter avec vos produits de stockage et sauvegarde OVHcloud.",
   "pci_projects_project_storages_volume_backup_guides_instances_overview_title": "Premiers pas avec les instances",
