--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
@@ -1,29 +1,29 @@
 {
-  "pci_projects_project_storages_volume_backup_create_breadcrumb": "Créer une sauvegarde",
+  "pci_projects_project_storages_volume_backup_create_breadcrumb": "Créer une sauvegarde de volume",
   "pci_projects_project_storages_volume_backup_create_guides_header": "Guides",
-  "pci_projects_project_storages_volume_backup_create_header": "Créer une sauvegarde",
+  "pci_projects_project_storages_volume_backup_create_header": "Créer une sauvegarde de volume",
   "pci_projects_project_storages_volume_backup_create_description": "Pour garantir une meilleure continuité d’activité de vos applications, il est nécessaire d’effectuer des copies régulières de vos données pour pouvoir les restaurer en cas de besoin.",
-  "pci_projects_project_storages_volume_backup_create_step_1_title": "Nom de votre volume block storage",
+  "pci_projects_project_storages_volume_backup_create_step_1_title": "Choisissez un volume à sauvegarder",
   "pci_projects_project_storages_volume_backup_create_step_1_select_label": "Volume à sauvegarder",
   "pci_projects_project_storages_volume_backup_create_step_1_select_placeholder": "Volume à sauvegarder",
   "pci_projects_project_storages_volume_backup_create_step_2_title": "Choisissez un type de sauvegarde",
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_1": "Effectuez des sauvegardes régulières",
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_2": "Profitez d'un service de sauvegarde selon vos besoins.",
-  "pci_projects_project_storages_volume_backup_create_step_2_description_link": "Lien vers guide snapshot ou backup",
+  "pci_projects_project_storages_volume_backup_create_step_2_description_link": "En savoir plus sur les sauvegardes",
   "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Prix : {{ priceValue }}",
-  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_label": "Volume backup",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_label": "Volume Backup",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description": "Vous pouvez capturer l'état des informations d'un volume à un instant t",
-  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_snapshot_label": "Volume snapshot",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_snapshot_label": "Volume Snapshot",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_snapshot_description": "Vous permet de limiter l’impact d’une perte non désirée de vos données applicatives",
   "pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_title": "Détacher votre volume de son instance",
-  "pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_description": "Si vous souhaitez créer un volume backup, vous devez impérativement détacher votre volume de son instance.",
+  "pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_description": "Si vous souhaitez créer un volume Backup, vous devez impérativement détacher votre volume de son instance.",
   "pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_action_detach": "Détacher votre volume",
-  "pci_projects_project_storages_volume_backup_create_step_4_title": "Nommez votre backup",
+  "pci_projects_project_storages_volume_backup_create_step_4_title": "Nommez votre sauvegarde",
   "pci_projects_project_storages_volume_backup_create_step_4_input_label": "Nom de la sauvegarde",
   "pci_projects_project_storages_volume_backup_create_action_create": "Créer la sauvegarde",
-  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_snapshot_success": "Votre sauvegarde {{ backupName }} a bien été créée.",
-  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success_part_1": "La sauvegarde {{ backupName }} est en cours de création.",
-  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success_part_2": "Une fois la sauvegarde créée, pensez à rattacher le volume {{ volumeName }} à son instance.",
-  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success_link": "Pensez à rattacher votre volume à son instance.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "Votre sauvegarde {{ backupName }} est en cours de création.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_snapshot_success": "Votre sauvegarde {{ backupName }} est en cours de création.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success_block_storage_link": "Vous pouvez la consulter depuis la page Volume Backup.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success_snapshot_link": "Vous pouvez la consulter depuis la page Volume Snapshot.",
   "pci_projects_project_storages_volume_backup_create_action_create_volume_backup_fail": "Une erreur est survenue lors de la création de votre sauvegarde : {{ errorMessage }}"
 }
