--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/create-volume/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/create-volume/translations/Messages_fr_FR.json
@@ -10,7 +10,7 @@
   "pci_projects_project_storages_volume_backup_list_create_volume_field_size_help": "La taille maximale dépend de votre quota disponible.",
   "pci_projects_project_storages_volume_backup_list_create_volume_action_confirm": "Créer le volume",
   "pci_projects_project_storages_volume_backup_list_create_volume_action_cancel": "Annuler",
-  "pci_projects_project_storages_volume_backup_list_create_volume_request_success": "Le volume {{ volumeName }} est en cours de création.",
-  "pci_projects_project_storages_volume_backup_list_create_volume_request_success_link": "Consulter la list des volumes.",
+  "pci_projects_project_storages_volume_backup_list_create_volume_request_success": "Votre volume {{ volumeName }} est en cours de création.",
+  "pci_projects_project_storages_volume_backup_list_create_volume_request_success_link": ". Vous pouvez le consulter depuis la page Block Storage.",
   "pci_projects_project_storages_volume_backup_list_create_volume_request_fail": "Une erreur s'est produite lors de la création du volume {{ volumeName }} : {{ message }}"
 }
