--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/delete/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/delete/translations/Messages_fr_FR.json
@@ -5,6 +5,6 @@
   "pci_projects_project_storages_volume_backup_list_delete_enter": "Entrez \"DELETE\" dans le champ ci-dessous pour confirmer",
   "pci_projects_project_storages_volume_backup_list_delete_action_confirm": "Confirmer",
   "pci_projects_project_storages_volume_backup_list_delete_action_cancel": "Annuler",
-  "pci_projects_project_storages_volume_backup_list_delete_success": "Le volume backup est en cours de suppression",
-  "pci_projects_project_storages_volume_backup_list_delete_error": "Une erreur s'est produite lors de la suppression du Volume Backup : {{ message }}"
+  "pci_projects_project_storages_volume_backup_list_delete_success": "Votre sauvegarde {{ volumeBackupName }} est en cours de suppression.",
+  "pci_projects_project_storages_volume_backup_list_delete_error": "Une erreur s'est produite lors de la suppression de votre sauvegarde {{ volumeBackupName }} : {{ message }}"
 }
