fix(container): sidebar menu accessibility
ref: DTCORE-651

Signed-off-by: Cyril Biencourt <cyril.biencourt@ovhcloud.com>
Co-authored-by: Florian Renaut <florian.renaut@corp.ovh.com>

--- a/packages/manager/apps/container/src/public/translations/navbar/Messages_fr_FR.json
+++ b/packages/manager/apps/container/src/public/translations/navbar/Messages_fr_FR.json
@@ -12,5 +12,6 @@
   "navbar_notifications": "Notifications",
   "navbar_language_change": "Changer la langue de l'interface",
   "navbar_account": "Mon compte",
-  "navbar_search": "Rechercher"
+  "navbar_search": "Rechercher",
+  "navbar_menu_name": "Menu principal"
 }
