feat(volume-backup): banner in case no volumes
ref: MANAGER-11021

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
@@ -3,6 +3,8 @@
   "pci_projects_project_storages_volume_backup_create_guides_header": "Guides",
   "pci_projects_project_storages_volume_backup_create_header": "Créer une sauvegarde de volume",
   "pci_projects_project_storages_volume_backup_create_description": "Pour garantir une meilleure continuité d’activité de vos applications, il est nécessaire d’effectuer des copies régulières de vos données pour pouvoir les restaurer en cas de besoin.",
+  "pci_projects_project_storages_volume_backup_create_banner_no_volumes_description": "Vous n'avez créé aucun volume pour le moment. Pour toute sauvegarde, merci de créer au moins un volume dans Block Storage.",
+  "pci_projects_project_storages_volume_backup_create_banner_no_volumes_link": "Créer un volume Block Storage.",
   "pci_projects_project_storages_volume_backup_create_step_1_title": "Choisissez un volume à sauvegarder",
   "pci_projects_project_storages_volume_backup_create_step_1_select_label": "Volume à sauvegarder",
   "pci_projects_project_storages_volume_backup_create_step_1_select_placeholder": "Volume à sauvegarder",
@@ -12,9 +14,11 @@
   "pci_projects_project_storages_volume_backup_create_step_2_description_link": "En savoir plus sur les sauvegardes",
   "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Prix : {{ priceValue }}",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_label": "Volume Backup",
-  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description": "Vous pouvez capturer l'état des informations d'un volume à un instant t",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_1": "Limitez l'impact d'une perte de données non désirée de vos données applicatives.",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_2": "Le backup est stocké sur un cluster différent (Object Storage) mais sur la même localisation que votre volume.",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_snapshot_label": "Volume Snapshot",
-  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_snapshot_description": "Vous permet de limiter l’impact d’une perte non désirée de vos données applicatives",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_snapshot_description_part_1": "Des instantanés pour vous laisser la possibilité de rapidement remonter dans le temps.",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_volume_snapshot_description_part_2": "Le snapshot est stocké sur le même cluster de stockage que votre volume.",
   "pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_title": "Détacher votre volume de son instance",
   "pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_description": "Si vous souhaitez créer un volume Backup, vous devez impérativement détacher votre volume de son instance.",
   "pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_action_detach": "Détacher votre volume",
