--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/restore-volume/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/restore-volume/translations/Messages_fr_FR.json
@@ -4,5 +4,5 @@
   "pci_projects_project_storages_volume_backup_list_restore_volume_action_confirm": "Confirmer",
   "pci_projects_project_storages_volume_backup_list_restore_volume_action_cancel": "Annuler",
   "pci_projects_project_storages_volume_backup_list_restore_volume_action_request_success": "Le volume {{ volumeName }} est en cours de restauration.",
-  "pci_projects_project_storages_volume_backup_list_restore_volume_action_request_error": "Un erreur est survenue lors de la restauration de votre volume {{ volumeName }} : {{ message }}"
+  "pci_projects_project_storages_volume_backup_list_restore_volume_action_request_error": "Une erreur est survenue lors de la restauration de votre volume {{ volumeName }} : {{ message }}"
 }
