feat(storage.cold-archive): edit container delete success message
ref: MANAGER-11025
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

feat(storage.cold-archive): content change

ref: MANAGER-11025
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>
Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_fr_FR.json
@@ -6,6 +6,6 @@
   "pci_projects_project_storages_containers_container_cold_archive_delete_cancel_label": "Annuler",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_1": "Votre conteneur {{containerName}} dispose encore de {{objetsCount}} objet(s).",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_2": "Pour supprimer définitivement votre conteneur, vous devez d'abord supprimer les objets qu'il comporte. Consultez notre <a class=\"oui-link oui-link_icon\" href=\"{{ docUrl }}\" target=\"_blank\" rel=\"noopener\">guide pour gérer les objets d'une archive avec AWS CLI</a>.",
-  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Le conteneur {{ containerName }} a été supprimé.",
+  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Le conteneur {{ containerName }} est en cours de suppression.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_error_delete": "Une erreur est survenue lors de la suppression du conteneur {{ containerName }} : {{ message }}."
 }
